--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# Project And classpath files
+*.classpath
+*.project
+
 # Package Files #
 *.jar
 *.war
